Backend/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: investment-search-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: investment-search-backend
  template:
    metadata:
      labels:
        app: investment-search-backend
    spec:
      containers:
        - name: backend
          image: investment-search-backend:latest
          ports:
            - containerPort: 5000
