Backend/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: investment-search-backend
spec:
  selector:
    app: investment-search-backend
  ports:
    - port: 5000
      targetPort: 5000
