Backend/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: investment-search-backend
spec:
  to:
    kind: Service
    name: investment-search-backend
